--- a/lab-webapp/views/signup.ejs
+++ b/lab-webapp/views/signup.ejs
@@ -6,8 +6,6 @@
   <title>lab-webapp(admin)</title>
   <!-- 부트스트랩 CSS 링크 추가 -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <!-- jQuery CDN 추가 -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <style>
     /* 페이지 스타일링을 위한 사용자 정의 CSS */
     body {
@@ -25,41 +23,8 @@
       height: 38px; /* 사용자 이름 입력란과 동일한 높이로 설정 */
     }
   </style>
-</head>
-<body>
-  <div class="container">
-    <div class="register-form">      
-      <h2 class="text-center mb-4">Lab-smartwork</h2>
-      <form id="registerForm">
-        <div class="form-group">
-          <label for="userId">ID</label>
-          <div class="input-group">
-            <input type="text" class="form-control" id="userId" name="userId" placeholder="사용자 ID를 입력하세요" required>
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary btn-check-username" type="button">중복 확인</button>
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="password">비밀번호</label>
-          <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호를 입력하세요" required>
-        </div>
-        <div class="form-group">
-          <label for="confirmPassword">비밀번호 확인</label>
-          <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="비밀번호를 다시 한번 입력하세요" required>
-        </div>
-        <div class="form-group">
-          <label for="reason">계정 등록 요청 사유</label>
-          <input type="text" class="form-control" id="reason" name="reason" placeholder="계정 등록 요청 사유를 입력하세요">
-        </div>
-        <button type="submit" class="btn btn-primary btn-block">계정 만들기</button>
-      </form>
-      <div class="text-center mt-3">
-        <button id="backBtn" class="btn btn-link">로그인 화면으로 돌아가기</button>
-      </div>      
-    </div>
-  </div>
-
+  <!-- jQuery CDN 추가 -->  
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>  
   <script>
     $(document).ready(function() {
       // 토글 버튼 클릭 시 로그인 폼으로 이동
@@ -101,7 +66,7 @@
             success: function(response) {
                 // 성공적으로 요청이 처리되었을 때 실행되는 콜백 함수
                 console.log(response); // 서버로부터의 응답 출력
-                alert('회원 가입이 완료되었습니다.'); // 회원 가입 완료 메시지 표시
+                alert('계정 등록 요청이 완료되었습니다. \n담당자에게 등록 승인요청 바랍니다.'); // 회원 가입 완료 메시지 표시
                 window.location.href = "/"; // 로그인 페이지로 이동
             },
             error: function(xhr, status, error) {
@@ -113,5 +78,39 @@
       });
     });
   </script>
+</head>
+<body>
+  <div class="container">
+    <div class="register-form">      
+      <h2 class="text-center mb-4">Lab-smartwork</h2>
+      <form id="registerForm">
+        <div class="form-group">
+          <label for="userId">ID</label>
+          <div class="input-group">
+            <input type="text" class="form-control" id="userId" name="userId" placeholder="사용자 ID를 입력하세요" required>
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary btn-check-username" type="button">중복 확인</button>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="password">비밀번호</label>
+          <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호를 입력하세요" required>
+        </div>
+        <div class="form-group">
+          <label for="confirmPassword">비밀번호 확인</label>
+          <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="비밀번호를 다시 한번 입력하세요" required>
+        </div>
+        <div class="form-group">
+          <label for="reason">계정 등록 요청 사유</label>
+          <input type="text" class="form-control" id="reason" name="reason" placeholder="계정 등록 요청 사유를 입력하세요">
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">계정 만들기</button>
+      </form>
+      <div class="text-center mt-3">
+        <button id="backBtn" class="btn btn-link">로그인 화면으로 돌아가기</button>
+      </div>      
+    </div>
+  </div>
 </body>
 </html>
