--- a/lab-webapp/views/common_sidebar.ejs
+++ b/lab-webapp/views/common_sidebar.ejs
@@ -33,7 +33,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="/message/send" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>FCM 메시지 발송</p>
                 </a>
